--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,37 +4,37 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
+  name = "about"
   url = "#about"
   weight = 10
 
 [[main]]
-  name = "Skills"
+  name = "skills"
   url = "#skills"
   weight = 20
 
 [[main]]
-  name = "Experience"
+  name = "experience"
   url = "#experience"
   weight = 30
 
 [[main]]
-  name = "Projects"
+  name = "projects"
   url = "#projects"
   weight = 40
 
 [[main]]
-  name = "Talks"
+  name = "talks"
   url = "#talks"
   weight = 50
 
 [[main]]
-  name = "Publications"
+  name = "publications"
   url = "#publications"
   weight = 60
 
 [[main]]
-  name = "Contact"
+  name = "contact"
   url = "#contact"
   weight = 70
 
