--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -104,6 +104,8 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
     name = "authors"
     weight = 20.0
 
+copyright_license = {enable = false, allow_derivatives = false, share_alike = true, allow_commercial = false, notice = "Except as otherwise noted, this work is licensed under {license}, and code samples are licensed under the MIT License."}
+
 # Install Wowchemy
 [module]
   [[module.imports]]
